apps/media/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - name: webui
      port: 9696
      targetPort: 9696
