apps/media/prowlarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-tls
